--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
+    <meta name="google-site-verification" content="Vg0iaJA8hebzMJTof4rDPuFNua05UGHDJE0scOc6iC4" />
+
     <title>SITFINDER | Trouvez votre Baby-sitter de confiance en un clic</title>
     <meta name="description" content="SITFINDER est la plateforme de mise en relation entre parents et baby-sitters. Sécurisé, rapide et local. Trouvez la garde idéale pour vos enfants dès maintenant." />
     <meta name="keywords" content="babysitter, garde d'enfant, sitfinder, baby-sitting, parents, garde d'urgence, application babysitting" />
