--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <meta name="google-site-verification" content="Vg0iaJA8hebzMJTof4rDPuFNua05UGHDJE0scOc6iC4" />
     <meta name="contact" content="vianney.bordais@gmail.com" />
 
-    <title>SITFINDER | Trouvez votre Baby-sitter de confiance en un clic</title>
-    <meta name="description" content="SITFINDER est la plateforme de mise en relation entre parents et baby-sitters. Sécurisé, rapide et local. Trouvez la garde idéale pour vos enfants dès maintenant." />
-    <meta name="keywords" content="babysitter, garde d'enfant, sitfinder, baby-sitting, parents, garde d'urgence, application babysitting" />
-    <meta name="author" content="SITFINDER" />
+    <title>BABYKEEPER | Trouvez votre Baby-sitter de confiance en un clic</title>
+    
+    <meta name="description" content="BABYKEEPER est la plateforme de mise en relation entre parents et baby-sitters. Sécurisé, rapide et local. Trouvez la garde idéale pour vos enfants dès maintenant." />
+    
+    <meta name="keywords" content="babysitter, garde d'enfant, babykeeper, baby-sitting, parents, garde d'urgence, application babysitting" />
+    <meta name="author" content="BABYKEEPER" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sitfinder-app.vercel.app/" />
-    <meta property="og:title" content="SITFINDER | La recherche de baby-sitter simplifiée" />
+    <meta property="og:title" content="BABYKEEPER | La recherche de baby-sitter simplifiée" />
     <meta property="og:description" content="Trouvez une baby-sitter de confiance près de chez vous. Inscription gratuite et mise en relation directe." />
     <meta property="og:image" content="/logo.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="SITFINDER" />
+    <meta property="twitter:title" content="BABYKEEPER" />
     <meta property="twitter:description" content="L'application qui connecte les parents et les baby-sitters en toute confiance." />
     <meta property="twitter:image" content="/logo.png" />
 
@@ -32,6 +34,7 @@
         theme: {
           extend: {
             colors: {
+              // On garde le nom technique 'sitgreen' pour ne pas casser le design
               sitgreen: '#16a34a',
             }
           }
