--- a/index.html
+++ b/index.html
@@ -7,40 +7,27 @@
     <meta name="google-site-verification" content="Vg0iaJA8hebzMJTof4rDPuFNua05UGHDJE0scOc6iC4" />
     <meta name="contact" content="vianney.bordais@gmail.com" />
 
-    <title>BABYKEEPER | Trouvez votre Baby-sitter de confiance en un clic</title>
+    <title>BABYKEEPER | Garde d'enfants de confiance</title>
     
-    <meta name="description" content="BABYKEEPER est la plateforme de mise en relation entre parents et baby-sitters. Sécurisé, rapide et local. Trouvez la garde idéale pour vos enfants dès maintenant." />
-    
-    <meta name="keywords" content="babysitter, garde d'enfant, babykeeper, baby-sitting, parents, garde d'urgence, application babysitting" />
+    <meta name="description" content="BABYKEEPER connecte les parents et les baby-sitters qualifiés. Sécurité, rapidité et confiance pour la garde de vos enfants." />
+    <meta name="keywords" content="babykeeper, babysitter, garde d'enfant, nounou, parents, application babysitting" />
     <meta name="author" content="BABYKEEPER" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sitfinder-app.vercel.app/" />
-    <meta property="og:title" content="BABYKEEPER | La recherche de baby-sitter simplifiée" />
-    <meta property="og:description" content="Trouvez une baby-sitter de confiance près de chez vous. Inscription gratuite et mise en relation directe." />
+    <meta property="og:title" content="BABYKEEPER | La garde d'enfants simplifiée" />
+    <meta property="og:description" content="Trouvez une baby-sitter de confiance près de chez vous en quelques clics." />
     <meta property="og:image" content="/logo.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="BABYKEEPER" />
-    <meta property="twitter:description" content="L'application qui connecte les parents et les baby-sitters en toute confiance." />
+    <meta property="twitter:description" content="L'application de référence pour la garde d'enfants." />
     <meta property="twitter:image" content="/logo.png" />
 
     <link rel="apple-touch-icon" href="/logo.png">
     <link rel="icon" type="image/png" href="/logo.png" />
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              // On garde le nom technique 'sitgreen' pour ne pas casser le design
-              sitgreen: '#16a34a',
-            }
-          }
-        }
-      }
-    </script>
   </head>
   <body>
     <div id="root"></div>
