--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LYME8JFXV9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LYME8JFXV9');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
     <meta name="google-site-verification" content="Vg0iaJA8hebzMJTof4rDPuFNua05UGHDJE0scOc6iC4" />
-    <meta name="contact" content="vianney.bordais@gmail.com" />
+    <meta name="contact" content="babykeeper.bordais@gmail.com" />
 
-    <title>BABYKEEPER | La garde d'enfants de confiance</title>
+    <title>BABYKEEPER | Trouvez votre Baby-sitter de confiance en un clic</title>
     
-    <meta name="description" content="BABYKEEPER connecte les parents et les baby-sitters vérifiés. Trouvez la garde idéale pour vos enfants en toute sécurité." />
-    <meta name="keywords" content="babykeeper, babysitter, garde enfant, parents, confiance, sécurité" />
+    <meta name="description" content="BABYKEEPER est la plateforme de mise en relation entre parents et baby-sitters. Sécurisé, rapide et local. Trouvez la garde idéale pour vos enfants dès maintenant." />
+    <meta name="keywords" content="babysitter, garde d'enfant, babykeeper, baby-sitting, parents, garde d'urgence, application babysitting" />
     <meta name="author" content="BABYKEEPER" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://sitfinder-app.vercel.app/" />
-    <meta property="og:title" content="BABYKEEPER | Trouvez votre nounou idéale" />
-    <meta property="og:description" content="Inscription gratuite et mise en relation directe avec des profils vérifiés." />
+    <meta property="og:title" content="BABYKEEPER | La recherche de baby-sitter simplifiée" />
+    <meta property="og:description" content="Trouvez une baby-sitter de confiance près de chez vous. Inscription gratuite et mise en relation directe." />
     <meta property="og:image" content="/logo.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="BABYKEEPER" />
-    <meta property="twitter:description" content="L'application de référence pour la garde d'enfants." />
+    <meta property="twitter:description" content="L'application qui connecte les parents et les baby-sitters en toute confiance." />
     <meta property="twitter:image" content="/logo.png" />
 
     <link rel="apple-touch-icon" href="/logo.png">
@@ -33,7 +41,8 @@
         theme: {
           extend: {
             colors: {
-              sitgreen: '#16a34a', // On garde le vert émeraude
+              satel_red: '#E64545',
+              satel_orange: '#E0720F',
             }
           }
         }
