--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
+    <link rel="preload" as="image" href="/logo.png">
     <meta name="google-site-verification" content="M7ZRT1Dc0sfQC7d5qmOcfbJPTeuP6rBHTOdR_aZfaKE" />
-    
     <meta name="contact" content="babykeeper.bordais@gmail.com" />
 
     <title>BABYKEEPER | Trouvez votre Baby-sitter de confiance en un clic</title>
@@ -15,7 +15,7 @@
     <meta name="author" content="BABYKEEPER" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://sitfinder-app.vercel.app/" />
+    <meta property="og:url" content="https://babykeeper-app.fr/" />
     <meta property="og:title" content="BABYKEEPER | La recherche de baby-sitter simplifiée" />
     <meta property="og:description" content="Trouvez une baby-sitter de confiance près de chez vous. Inscription gratuite et mise en relation directe." />
     <meta property="og:image" content="/logo.png" />
