--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
     <link rel="preload" as="image" href="/logo.png">
+
     <meta name="google-site-verification" content="M7ZRT1Dc0sfQC7d5qmOcfbJPTeuP6rBHTOdR_aZfaKE" />
     <meta name="contact" content="babykeeper.bordais@gmail.com" />
 
     <title>BABYKEEPER | Trouvez votre Baby-sitter de confiance en un clic</title>
     
-    <meta name="description" content="BABYKEEPER est la plateforme de mise en relation entre parents et baby-sitters. Sécurisé, rapide et local. Trouvez la garde idéale pour vos enfants dès maintenant." />
-    <meta name="keywords" content="babysitter, garde d'enfant, babykeeper, baby-sitting, parents, garde d'urgence, application babysitting" />
+    <meta name="description" content="BABYKEEPER est la plateforme de mise en relation entre parents et baby-sitters. Sécurisé, rapide et local." />
+    <meta name="keywords" content="babysitter, garde d'enfant, babykeeper, baby-sitting, parents, garde d'urgence" />
     <meta name="author" content="BABYKEEPER" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://babykeeper-app.fr/" />
     <meta property="og:title" content="BABYKEEPER | La recherche de baby-sitter simplifiée" />
-    <meta property="og:description" content="Trouvez une baby-sitter de confiance près de chez vous. Inscription gratuite et mise en relation directe." />
+    <meta property="og:description" content="Trouvez une baby-sitter de confiance près de chez vous." />
     <meta property="og:image" content="/logo.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
@@ -28,6 +29,15 @@
     <link rel="apple-touch-icon" href="/logo.png">
     <link rel="icon" type="image/png" href="/logo.png" />
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function(){
+         // Initialisation avec TA Clé Publique
+         emailjs.init({
+           publicKey: "tIbsMmDCp4dlYfTiV",
+         });
+      })();
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
