--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
+    <link rel="manifest" href="/manifest.json">
+   
     <link rel="preload" as="image" href="/logo.png">
 
     <meta name="google-site-verification" content="M7ZRT1Dc0sfQC7d5qmOcfbJPTeuP6rBHTOdR_aZfaKE" />
